--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">iTunes</string>
     <string name="search">Search</string>
     <string name="artist">Artist</string>
+    <string name="no_data_available">No data</string>
 </resources>
