wiki information api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="release_date">Release date</string>
     <string name="author">Author</string>
     <string name="songs">Songs</string>
+    <string name="information">Information</string>
 </resources>
