PT-68-Minor_fix_app_name_string_res

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">iTunes</string>
+    <string name="app_name">Plectrum</string>
     <string name="search">Search</string>
     <string name="artist">Artist</string>
     <string name="no_data_available">No data</string>
