--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="album_image">Album image</string>
     <string name="artist_image">Artist image</string>
     <string name="albums">Albums:</string>
+    <string name="movie">Movie</string>
+    <string name="books">Books</string>
 </resources>
