--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="books">Books</string>
     <!-- Dashboard item. -->
     <string name="text_header_more">More</string>
+    <string name="album_name">Album name</string>
+    <string name="track_price">Track price</string>
 </resources>
